# dc

./: .gitattributes  .gitignore  .mcp.json  .mcpbignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  dc  manifest.json  pyproject.toml  server.json
.agents/skills/: dc
.claude/: settings.json
.claude/docs/: mcp.md  skill-conventions.md
.claude/skills/dc/: .env.dc.example  SKILL.md  config.json  dc_skill.py
.codex/: config.toml
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: publish-mcp.yml  publish-npm.yml  publish.yml
DC/: SKILL.md
contracts/: README.md  openapi.json  operation-map.json
dc/: SKILL.md  dc.py  requirements.txt
docs/: mcp-info.md  mcp.md  skill-conventions.md  skill-info.md
py/: .env.dc.example  SKILL.md  config.json  dc.py  requirements.txt
tests/: conftest.py  test_all_commands.py  test_annotations.py  test_calendar_locator.py  test_mcp_snake_case.py  test_openapi_contract.py  test_profile_update.py  test_schema_contract.py  test_trips.py  test_version_sync.py
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/examples/: basic.ts
ts/src/: client.ts  errors.ts  index.ts  types.ts  version.ts
ts/tests/: client.test.mjs
